--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^27.0.0"
+  },
+  "dependencies": {
+    "canvas": "^3.1.2"
   }
 }
-
