--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --dev"
+    "dev": "electron . --dev",
+    "build": "electron-builder",
+    "build:mac": "electron-builder --mac",
+    "build:mac-no-dmg": "npm run build:mac -- --publish=never --mac dir",
+    "dist": "electron-builder --publish=never"
   },
   "keywords": [
     "electron",
@@ -14,9 +18,42 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^27.0.0"
+    "electron": "^27.0.0",
+    "electron-builder": "^26.0.12"
   },
   "dependencies": {
     "canvas": "^3.1.2"
+  },
+  "build": {
+    "appId": "com.garden.app",
+    "productName": "Garden",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "main.js",
+      "preload.js",
+      "loading.html",
+      "error.html",
+      "menu-icon.png",
+      "node_modules/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "icon": "icon.png",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "arm64",
+            "x64"
+          ]
+        }
+      ]
+    },
+    "dmg": {
+      "title": "Garden App",
+      "icon": "icon.png"
+    }
   }
 }
