--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "garden-app",
   "version": "0.0.1",
   "description": "Electron app that runs garden -p 8888 and embeds a browser for localhost:8888",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "electron . --dev",
-    "build": "electron-builder",
-    "build:mac": "electron-builder --mac",
+    "start": "npm run compile && electron .",
+    "dev": "npm run compile && electron . --dev",
+    "compile": "tsc",
+    "compile:watch": "tsc --watch",
+    "build": "npm run compile && electron-builder",
+    "build:mac": "npm run compile && electron-builder --mac",
     "build:mac-no-dmg": "npm run build:mac -- --publish=never --mac dir",
-    "dist": "electron-builder --publish=never"
+    "dist": "npm run compile && electron-builder --publish=never"
   },
   "keywords": [
     "electron",
@@ -18,8 +20,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^24.2.1",
     "electron": "^27.0.0",
-    "electron-builder": "^26.0.12"
+    "electron-builder": "^26.0.12",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "canvas": "^3.1.2"
@@ -28,11 +33,10 @@
     "appId": "com.garden.app",
     "productName": "Garden",
     "directories": {
-      "output": "dist"
+      "output": "build"
     },
     "files": [
-      "main.js",
-      "preload.js",
+      "dist/**/*",
       "loading.html",
       "error.html",
       "menu-icon.png",
