--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,6 @@
     "sourceMap": true,
     "lib": ["ES2020", "DOM"]
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
