--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "npm run compile && electron . --dev",
     "compile": "tsc",
     "compile:watch": "tsc --watch",
-    "build": "npm run compile",
+    "build": "npm run compile && electron-builder",
     "build:mac": "npm run compile && electron-builder --mac",
-    "build:mac-no-dmg": "npm run build:mac -- --publish=never --mac dir",
+    "build:mac-no-dmg": "rm -rf dist build && npm run compile && electron-builder --mac --dir",
     "dist": "npm run compile && electron-builder --publish=never",
     "prepare": "husky",
     "eslint": "eslint src --ext .ts",
